--- a/wa.html
+++ b/wa.html
@@ -89,10 +89,10 @@
     <!-- <div class="container section-title" data-aos="fade-up">
       <h2>Eviction Statistics</h2>
       </div><!-- End Section Title -->
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container">
         <div class="row gy-4">
           <div class="col-lg-3 col-md-6">
-            <div class="stats-item d-flex align-items-center w-100 h-100">
+            <div class="stats-item d-flex align-items-center h-100">
               <i class="bi bi-people color-blue flex-shrink-0"></i>
               <div>
                 <h3>2.1%</h3>
@@ -103,17 +103,17 @@
             </div>
             </div><!-- End Stats Item -->
             <div class="col-lg-3 col-md-6">
-              <div class="stats-item d-flex align-items-center w-100 h-100">
+              <div class="stats-item d-flex align-items-center h-100">
                 <i class="bi bi-arrow-up-short color-orange flex-shrink-0"></i>
                 <div>
-                  <h3 style = "font-size: 22px;">Above historical average</h3>
-                  <!-- <span data-purecounter-start="0" data-purecounter-end="70000" data-purecounter-duration="1" class="purecounter"></span> -->
+                  <h3>Above historical average</h3>
+                  
                   <p>since July 2023</p>
                 </div>
               </div>
               </div><!-- End Stats Item -->
               <div class="col-lg-3 col-md-6">
-                <div class="stats-item d-flex align-items-center w-100 h-100">
+                <div class="stats-item d-flex align-items-center h-100">
                   <i class="bi bi-house color-green flex-shrink-0"></i>
                   <div>
                     <!-- <span data-purecounter-start="0" data-purecounter-end="46" data-purecounter-duration="1" class="purecounter"></span> -->
@@ -123,10 +123,10 @@
                 </div>
                 </div><!-- End Stats Item -->
                 <div class="col-lg-3 col-md-6">
-                  <div class="stats-item d-flex align-items-center w-100 h-100">
+                  <div class="stats-item d-flex align-items-center h-100">
                     <i class="bi bi-person color-pink flex-shrink-0"></i>
                     <div>
-                      <h3 style = "font-size: 22px;">1 in 6</h3>
+                      <h3>1 in 6</h3>
                       <!-- <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span> -->
                       <p>black adults evicted in Pierce County</p>
                     </div>
@@ -179,8 +179,8 @@
                     <!-- /second graph -->
                     <!-- description of second graph -->
                     <div class="col-lg-5 d-flex flex-column">
-                      <h3>State filing counts have been above the historical average since July 2023.
-                      </h3>
+                      <h3><i>State filing counts have been above the historical average since July 2023.
+                      </i></h3>
                       <p>
                         The Washington State Eviction Filings by County graph shows the overall eviction filing counts since April 2023. As of July 2023, the state exceeded the monthly historical average. October 2023 marked the highest monthly count of over 2,000 cases per month. Since then, the state has filed roughly more than 1,900 cases per month.
                       </p>
@@ -198,58 +198,68 @@
               <!-- Table  -->
               <br>
               <div class="container">
-                <div class="row justify-content-center gy-4">
+                <div class="row justify-content-center gy-4" style="height: 50%;">
                   <iframe title="Washington County Eviction Filings in the Past 12 months (Sept. 2023 to Aug. 2024) " aria-label="Table" id="datawrapper-chart-hqS4c" src="https://datawrapper.dwcdn.net/hqS4c/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="538" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                   </script>
                 </div>
               </div>
               <br>
               <!-- /Table -->
-              </section><!-- /Historical Average Plot -->
+              </section>
+              <!-- /Historical Average Plot -->
+
               <!-- Maps section -->
               <section id="alt-services" class="alt-services section" style="padding:30px">
                 <div class="container section-title">
                   <h2>Washington State Eviction Maps</h2>
                   <br>
                 </div>
-                <div class="container"  style="column-count: 2;">
-                  <iframe title="Washington State Eviction Filing Count" aria-label="Map" id="datawrapper-chart-Oa2mA" src="https://datawrapper.dwcdn.net/Oa2mA/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; padding-right:65px" height="525" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-                  </script>
-                  <br><br>
-                  <b>
-                  Counties with more than 2,000 filings in the last 12 months:
-                  </b>
-                  <p>
-                    <ul>
-                      <li><span>King (Seattle) - 7,362</span></li>
-                      <li><span>Pierce (Tacoma) - 3,561<span></li>
-                      <li><span>Spokane - 2,228</span></li>
-                      <li><span>Clark (Vancouver) - 2,150</span></li>
-                      <li><span>Snohomish (Everett) - 2,118</span></li>
-                    </ul>
-                  </p>
-                  <!-- begin datawrapper snippet -->
-                  <iframe title="Washington State Eviction Filing Rate" aria-label="Map" id="datawrapper-chart-ge8x2" src="https://datawrapper.dwcdn.net/ge8x2/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;padding-left:35px" height="528" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-                  </script>
-                  <br><br>
-                  <b>
-                  Counties with top filling rates and counts:
-                  </b>
-                  <p>
-                    <ul>
-                      <li><span>Clark (Vancouver) - 2,100 evictions,  3.4% eviction rate</span></li>
-                      <li><span>Pierce (Tacoma) - 3,500 evictions, 2.9% eviction rate</span></li>
-                      <li><span>Spokane - 2,200 evictions, 2.9% eviction rate</span></li>
-                    </ul>
-                  </p>
-                </div>
-                <div class="icon-box d-flex position-relative" style="padding-left:350px;">
-                  <i class="bi bi-folder2"></i>
-                  <div>
-                    <h4><a href="https://evictionresearch.net/washington/" class="stretched-link">Read 2020 Report</a></h4>
-                    <p>The State of Evictions: Results from the University of Washington Evictions Project</p>
+                <div class="container">
+                  <div class="row justify-content-around gy-4">
+                    <div class="col-lg-6 d-flex flex-column">
+                      <iframe title="Washington State Eviction Filing Count" aria-label="Map" id="datawrapper-chart-Oa2mA" src="https://datawrapper.dwcdn.net/Oa2mA/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="525" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+                      </script>
+                      <br>
+
+                      <b>
+                      Counties with more than 2,000 filings in the last 12 months:
+                      </b>
+                      <p>
+                      <ul>
+                        <li><span>King (Seattle) - 7,362</span></li>
+                        <li><span>Pierce (Tacoma) - 3,561<span></li>
+                        <li><span>Spokane - 2,228</span></li>
+                        <li><span>Clark (Vancouver) - 2,150</span></li>
+                        <li><span>Snohomish (Everett) - 2,118</span></li>
+                      </ul>
+                      </p>
+                  
+                    </div>
+                    <div class="col-lg-6 d-flex flex-column">
+                      <!-- begin datawrapper snippet -->
+                      <iframe title="Washington State Eviction Filing Rate" aria-label="Map" id="datawrapper-chart-ge8x2" src="https://datawrapper.dwcdn.net/ge8x2/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="528" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+                      </script>
+                      <br>
+                      <b>
+                      Counties with top filling rates and counts:
+                      </b>
+                      <p>
+                      <ul>
+                        <li><span>Clark (Vancouver) - 2,100 evictions,  3.4% eviction rate</span></li>
+                        <li><span>Pierce (Tacoma) - 3,500 evictions, 2.9% eviction rate</span></li>
+                        <li><span>Spokane - 2,200 evictions, 2.9% eviction rate</span></li>
+                      </ul>
+                      </p>
+                      <div class="icon-box d-flex position-relative">
+                        <i class="bi bi-folder2"></i>
+                        <div>
+                        <h4><a href="https://evictionresearch.net/washington/" class="stretched-link">Read 2020 Report</a></h4>
+                        <p>The State of Evictions: Results from the University of Washington Evictions Project</p>
+                      </div>
+                    </div>
+                    </div><!-- End Icon Box -->
                   </div>
-                  </div><!-- End Icon Box -->
+                </div>
                 </section>
                 <br>
                 <!-- Maps section -->
