adding ERN favicon

--- a/wa.html
+++ b/wa.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <!-- favicon logo -->
-    <link rel="icon" type="image/jpeg" href="https://evictionresearch.net/archive/jpg/color/EvictionsStudy_EmblemSquare_red_icon.jpeg">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>WA Eviction Filings</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+    <link rel="icon" type="image/jpeg" href="https://evictionresearch.net/archive/jpg/color/EvictionsStudy_EmblemSquare_red_icon.jpeg">
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
