some small changes to index

--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
           <iframe class="features-image img col-lg-7" src="maps/us_map.html" frameborder="0" scrolling="yes" onload="resizeIframe(this)" ></iframe>
           <div class="col-lg-5 d-flex flex-column justify-content-center">
             <h3><b><i>Ongoing state specific eviction research</i></b></h3>
-            <p>The Eviction Research Network focuses on state specific eviction trends in order to highlight racial and gender disparities in under-studied regions. State history and current legeslation ...</p>
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <span>Currently 8 states researched</span></li>
-            </ul>
+            <p>The Eviction Research Network focuses on state specific eviction trends in order to highlight racial and gender disparities in under-studied regions. </p>
+            
+            <p>Overall these trends demonstrate a conserning rate of evictions compared to before the pandemic in 2020. Change must be done at the state level in order to create federal change.</p>
+            
             <p><i>Check out the state specific pages by clicking on the state!</i></p>
           </div>
         </div>
