--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="https://evictionresearch.net/methodology.html">Methodology</a></li>
           <li class="dropdown"><a href="#"><span>Projects</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li class="dropdown"><a href="#"><span>State Eviction Maps & Profiles</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -63,17 +63,17 @@
                   <li><a href="https://evictionresearch.net/washington/" target="_blank">Washington</a></li>
                 </ul>
               </li>
-              <li><a href="#">Earlier Work</a></li>
-              <li><a href="#">Reports</a></li>
+              <!--<li><a href="https://evictionresearch.net/research.html">Earlier Work</a></li>
+              <!-<li><a href="#">Reports</a></li>-->
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="resources.html">Eviction Help</a></li>
-              <li><a href="projects.html">Other Eviction Research</a></li>
+              <li><a href="https://evictionresearch.net/resources.html">Eviction Help</a></li>
+              <li><a href="https://evictionresearch.net/research.html">Other Eviction Research</a></li>
             </ul>
           </li>
-          <li><a href="blog.html">Blog</a></li>
+          <!--<li><a href="blog.html">Blog</a></li>-->
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -270,7 +270,7 @@
       <br>
       <br>
       <div class="col-lg-12 text-center">
-        <h4><a href="research&news.html" class="btn-get-started"><span>For more research & news </span><i class="bi bi-arrow-right"></i></a></h4>
+        <h4><a href="https://evictionresearch.net/research.html" class="btn-get-started"><span>For more research & news </span><i class="bi bi-arrow-right"></i></a></h4>
       </div>
 
 
