--- a/index.html
+++ b/index.html
@@ -144,7 +144,12 @@
             <p><i>Check out the state specific pages by clicking on the state!</i></p>
           </div>
           <div class="col-lg-7">
-            <iframe class="map-embed" src="maps/us_map.html" frameborder="0"></iframe>
+            <div class="map-container">
+              <iframe class="map-embed" src="maps/us_map.html" frameborder="0"></iframe>
+              <div class="map-overlay">
+                <p>Click to learn more!</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
