"deleted stock photos"

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
           <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg"></div>
 
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-            <h2 class="inner-title">Consequatur eius et magnam</h2>
+            <h2 class="inner-title">About us</h2>
             <div class="our-story">
               <h4>Est 1988</h4>
               <h3>Our Story</h3>
@@ -148,7 +148,7 @@
               <i class="bi bi-emoji-smile color-blue flex-shrink-0"></i>
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Happy Clients</p>
+                <p>Reports</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
@@ -318,8 +318,8 @@
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="timothyathomas.com"><i class="bi bi-instagram"></i></a>
+                <a href="linkedin.com/in/drtthomas"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
@@ -336,7 +336,7 @@
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="linkedin.com/in/aaron-culich"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
@@ -353,7 +353,7 @@
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="linkedin.com/in/miaschwing"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
@@ -370,7 +370,7 @@
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="linkedin.com/in/mina-mohebbi00"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
@@ -387,13 +387,13 @@
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="linkedin.com/in/reily-fairchild"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
               <h4>Reily Fairchild</h4>
               <span>Project Specialist</span>
-              <p>Qui consequuntur quos accusamus magnam quo est molestiae eius laboriosam sunt doloribus quia impedit laborum velit</p>
+              <p> </p>
             </div>
           </div><!-- End Team Member -->
 
@@ -404,13 +404,13 @@
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/ekfiske"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
               <h4>Elizabeth Kirkpatrick Fiske</h4>
               <span>Project Specialist</span>
-              <p>Sint sint eveniet explicabo amet consequatur nesciunt error enim rerum earum et omnis fugit eligendi cupiditate vel</p>
+              <p>Elizabeth is an undergraduate student at UC Berkeley studying Geography and Data Science. She is passionate about addressing housing precocity and displacement, particularly in the San Francisco Bay Area.</p>
             </div>
           </div><!-- End Team Member -->
 
@@ -421,13 +421,13 @@
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="linkedin.com/in/evalwinter"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
               <h4>Eva Winter</h4>
               <span>Project Specialist</span>
-              <p>A Cal alum who majored in Public Health and minored in Mathematics and have a passion for grassroots public health movements. </p>
+              <p>Cal alum with passion for grassroots public health movements. </p>
             </div>
           </div><!-- End Team Member -->
 
